<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvStatus"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/innerConstraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
    >
        <TextView
                android:text="@string/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailName"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailName"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailName"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailName" android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailName"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailUsername"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailUsername"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailUsername"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailUsername"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailEmail"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailEmail"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailEmail"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailEmail"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>

        <TextView
                android:text="@string/tv_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailStreet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailAddress"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailStreet"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailStreet"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailStreet"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_suite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailSuite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailStreet"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailSuite"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailSuite"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailSuite"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailSuite"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailCity"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailCity"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailCity" android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailZipcode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailCity"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailZipcode"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailZipcode"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailZipcode"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailZipcode"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailPhone"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailPhone"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailPhone"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailWebsite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailPhone"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailWebsite"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailWebsite"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailWebsite"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailCompany"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailWebsite"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>

        <TextView
                android:text="@string/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailCompanyname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailCompany"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailCompanyname"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailCompanyname"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailCompanyname"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_catchPhrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailCatchPhrase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailCompanyname"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailCatchPhrase"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailCatchPhrase"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailCatchPhrase"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_bs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelUserdetailBS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserdetailCatchPhrase"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:textStyle="bold"
        />
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userdetailBS"
                app:layout_constraintStart_toEndOf="@+id/labelUserdetailBS"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelUserdetailBS" android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="@string/title_posts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/innerConstraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_margin="16dp">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>