<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:padding="16dp"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="@drawable/border"
                                                   android:layout_marginBottom="8dp">
    <TextView
            android:id="@+id/labelName"
            android:text="@string/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btGallery"
            android:layout_marginStart="16dp"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="User Name"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelName"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/labelName"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:id="@+id/labelAddress"
            android:text="@string/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelName"
            app:layout_constraintStart_toEndOf="@+id/btGallery"
            android:layout_marginStart="16dp"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/labelStreet"
            android:text="@string/tv_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelAddress"
            app:layout_constraintStart_toEndOf="@+id/btGallery"
            android:layout_marginStart="24dp" android:textStyle="bold"/>
    <TextView
            android:id="@+id/userStreet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="User Email"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelStreet"
            app:layout_constraintStart_toStartOf="@+id/userSuite" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:id="@+id/labelSuite"
            android:text="@string/tv_suite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelStreet"
            app:layout_constraintStart_toEndOf="@+id/btGallery"
            android:layout_marginStart="24dp" android:textStyle="bold"/>
    <TextView
            android:id="@+id/userSuite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="User Email"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelSuite"
            app:layout_constraintStart_toStartOf="@+id/userZipcode" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:id="@+id/labelZipcode"
            android:text="@string/tv_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelSuite"
            app:layout_constraintStart_toEndOf="@+id/btGallery"
            android:layout_marginStart="24dp" android:textStyle="bold"/>
    <TextView
            android:id="@+id/userZipcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="User Email"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelZipcode"
            app:layout_constraintStart_toEndOf="@+id/labelZipcode" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:id="@+id/labelCity"
            android:text="@string/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelZipcode"
            app:layout_constraintStart_toEndOf="@+id/btGallery"
            android:layout_marginStart="24dp" android:textStyle="bold"/>
    <TextView
            android:id="@+id/userCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="User Email"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelCity"
            app:layout_constraintStart_toStartOf="@+id/userZipcode" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGallery"
            android:background="@android:drawable/ic_menu_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>


</androidx.constraintlayout.widget.ConstraintLayout>