<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PostActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvStatus"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/innerConstraintLayout"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelPostTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textStyle="bold"/>
        <TextView
                android:text="Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/postTitle"
                app:layout_constraintStart_toEndOf="@+id/labelPostTitle"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelPostTitle" android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/tv_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelPostBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelPostTitle"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textStyle="bold"/>
        <TextView
                android:text="Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/postBody"
                app:layout_constraintStart_toEndOf="@+id/labelPostBody"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelPostBody"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="@string/title_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/innerConstraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_margin="16dp">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>